# fwd_ad

./: .gitlab-ci.yml  Cargo.toml  Readme.md  tests.sh
benches/: bench_ops_dual.rs
examples/: rosenbrock.rs  rosenbrock_array.rs
src/: generate_duals.rs  impl_ops_dual.rs  impl_ops_scalar_rhs.rs  instanciations.rs  lib.rs  owning_markers.rs  traits.rs  view_and_owning_traits.rs
src/traits/: containers.rs  scalars.rs
src/traits/containers/: impl_arrays.rs
