[package]
name = "fwd_ad"
version = "0.1.0"
authors = ["Arthur Carcano <arthur.carcano@inria.fr>"]
edition = "2018"
description = "A forward auto-differentiation library"
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
implicit-clone = []
bench = ["criterion"]


[dependencies]
num-traits = "0.2.11"
criterion = {version = "0.3", optional=true}

[[bench]]
name = "bench_ops_dual"
harness = false
required-features = ["bench"]