[package]
name = "fwd_ad"
version = "0.1.0"
authors = ["Arthur Carcano <arthur.carcano@inria.fr>"]
edition = "2018"
description = "Forward auto-differentiation, allowing its user to manage memory location and minimize copying."
readme = "Readme.md"
license = "MIT"
repository = 'https://gitlab.inria.fr/InBio/Public/fwd_ad'
keywords = ['automatic', 'differentiation', 'forward', 'dual', 'ad']
categories=["mathematics", "science"]

exclude = [".gitlab-ci.yml"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
implicit-clone = []
bench = ["criterion"]


[dependencies]
num-traits = "0.2.11"
criterion = {version = "0.3", optional=true}

[[bench]]
name = "bench_ops_dual"
harness = false
required-features = ["bench"]